base/service-details.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: details-service
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: details
  ports:
  - port: 3001
