base/service-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  selector:
    app: productpage
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: https
    port: 443
    targetPort: 3000
