base/service-ratings.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: ratings-service
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: ratings
  ports:
  - port: 3002
