base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
  annotations:
    argocd.argoproj.io/sync-wave: "6"
spec:
  controller: istio.io/ingress-controller
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  tls:
  - secretName: tls-secret
  ingressClassName: istio
  rules:
  - host: product.qa.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-service
            port: 
              number: 80
