base/l4-service-to-service-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productpage-viewer-1
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "7"
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-ingress/sa/istio-ingressgateway-service-account

# # --- 
# # apiVersion: security.istio.io/v1beta1
# # kind: AuthorizationPolicy
# # metadata:
# #   name: productpage-viewer-2
# #   namespace: test_base_ns
# #   annotations:
# #     argocd.argoproj.io/sync-wave: "8"
# # spec:
# #   selector:
# #     matchLabels:
# #       app: details
# #   action: ALLOW
# #   rules:
# #   - from:
# #     - source:
# #         principals:
# #         - cluster.local/ns/test_base_ns/sa/product-service-account
# #         - cluster.local/ns/test_base_ns/sa/waypoint
# # --- 
# # apiVersion: security.istio.io/v1beta1
# # kind: AuthorizationPolicy
# # metadata:
# #   name: productpage-viewer-3
# #   namespace: test_base_ns
# #   annotations:
# #     argocd.argoproj.io/sync-wave: "8"
# # spec:
# #   selector:
# #     matchLabels:
# #       app: ratings
# #   action: ALLOW
# #   rules:
# #   - from:
# #     - source:
# #         principals:
# #         - cluster.local/ns/test_base_ns/sa/product-service-account
# #         - cluster.local/ns/test_base_ns/sa/waypoint
